# package_template

./: README.md  setup.cfg
package_template/: utilities.py
package_template/scripts/: run_package_template.py
