[metadata]
name = package_template
version = 1.0.0
author = hazardgoat
description = automated package template builder
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires =
    >=3.7

[options.entry_points]
console_scripts =
    package_template = package_template.scripts.run_package_template:run_package_template
